Concert Aggregate 리팩토링(Seat 엔티티 -> ConcertHallSeat, SeatInfo 엔티티 -> ConcertScheduleSeat 엔티티 및 외래키 제거)